JS: More FileInput conversions
Specifically, convert previewCache and skyboxes to new file handling.

Signed-off-by: Matt Chudleigh <matt.chudleigh@ausenco.com>
Signed-off-by: Harvey Harrison <harvey.harrison@ausenco.com>